--- a/Falcon 7b/inference_haystack_falcon.ipynb
+++ b/Falcon 7b/inference_haystack_falcon.ipynb
@@ -9,25 +9,9 @@
     "\n",
     "import os\n",
     "\n",
-    "from haystack.agents import Agent, Tool\n",
-    "from haystack.agents.base import ToolsManager\n",
-    "from haystack.nodes import PromptNode, PromptTemplate\n",
-    "from haystack.nodes.retriever.web import WebRetriever\n",
-    "from haystack.pipelines import WebQAPipeline\n",
     "\n",
-    "import torch\n",
-    "import gc\n",
-    "import json\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "torch.cuda.empty_cache()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from haystack.nodes import PromptNode, PromptTemplate\n",
+    "\n",
     "from haystack.nodes import PromptNode\n",
     "from haystack.nodes.prompt.prompt_model import PromptModel\n",
     "\n",
@@ -58,6 +42,20 @@
     "logger = logging.getLogger(__name__)\n",
     "from haystack import Document, Pipeline\n",
     "\n",
+    "\n",
+    "import torch\n",
+    "import gc\n",
+    "import json\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "torch.cuda.empty_cache()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "class CustomHFLocalInvocationLayer(PromptModelInvocationLayer):\n",
@@ -404,7 +402,8 @@
     "                continue\n",
     "            options += str(key) + \" \" +test_data_ans[ex][key]+\"\\n\"\n",
     "\n",
-    "    imput = \"Youre a Telecommunication standards expert. Please answer question by selecting the most likely option (1-5), only output the correct option, first consider the given context for the answer \\n\" + question+ \"\\n\\nConsidering the following retrieved contexts\"+\"\\ncontext 1: \"+ \"\\n\".join(test_data_ans[ex][\"context_bm_300\"])+ \"\\ncontext 2: \"+\"\\n\".join(test_data_ans[ex][\"context_gte\"][:5])+ \"\\n\" + question+ options \n",
+    "    # imput = \"Youre a Telecommunication standards expert. Please answer question by selecting the most likely option (1-5), only output the correct option, first consider the given context for the answer \\n\" + question+ \"\\n\\nConsidering the following retrieved contexts\"+\"\\ncontext 1: \"+ \"\\n\".join(test_data_ans[ex][\"context_bm_300\"])+ \"\\ncontext 2: \"+\"\\n\".join(test_data_ans[ex][\"context_gte\"][:5])+ \"\\n\" + question+ options \n",
+    "    imput = \"Youre a Telecommunication standards expert. Please answer the question  first consider the given context for the answer \\n\" + question+ \"\\n\\nConsidering the following retrieved contexts\"+ \"\\ncontext 1: \"+ \"\\n\".join(test_data_ans[ex][\"context_gte\"][:2])+\"\\ncontext 2: \"+ \"\\n\".join(test_data_ans[ex][\"context_bm_300\"][:2]) +\"\\n\".join(test_data_ans[ex][\"context_gle\"][:5])+ \"\\n\" + question\n",
     "    # print(imput)\n",
     "\n",
     "    answer = prompt_node(imput)\n",
