--- a/Falcon 7b/inference_haystack_falcon.ipynb
+++ b/Falcon 7b/inference_haystack_falcon.ipynb
@@ -441,6 +441,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "\n",
+    "model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i in range(len(submission[\"Answer_ID\"])):\n",
     "    print(i)\n",
     "    if isinstance(submission[\"Answer_ID\"][i], list):\n",
